--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,12 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@monorepos/reusable-components": [
+        "libs/reusable-components/src/index.ts"
+      ],
+      "@monorepos/ui": ["libs/ui/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
