feat: add nestjs server
- set up proxy conf to in angular app to call nestjs server
- create nestjs server
- consume nestjs server

--- a/nx.json
+++ b/nx.json
@@ -1,18 +1,13 @@
 {
   "implicitDependencies": {
     "angular.json": "*",
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     "tsconfig.base.json": "*",
     "tslint.json": "*",
     ".eslintrc.json": "*",
     "nx.json": "*"
   },
-  "affected": {
-    "defaultBase": "master"
-  },
+  "affected": { "defaultBase": "master" },
   "npmScope": "monorepos",
   "tasksRunnerOptions": {
     "default": {
@@ -29,22 +24,14 @@
     }
   },
   "projects": {
-    "monorepos": {
-      "tags": []
-    },
-    "monorepos-e2e": {
-      "tags": [],
-      "implicitDependencies": ["monorepos"]
-    },
-    "reusable-components": {
-      "tags": []
-    },
+    "monorepos": { "tags": [] },
+    "monorepos-e2e": { "tags": [], "implicitDependencies": ["monorepos"] },
+    "reusable-components": { "tags": [] },
     "reusable-components-e2e": {
       "tags": [],
       "implicitDependencies": ["reusable-components"]
     },
-    "ui": {
-      "tags": []
-    }
+    "ui": { "tags": [] },
+    "server": { "tags": [] }
   }
 }
