--- a/angular.json
+++ b/angular.json
@@ -72,13 +72,9 @@
               "apps/monorepos/src/favicon.ico",
               "apps/monorepos/src/assets"
             ],
-            "styles": [
-              "apps/monorepos/src/styles.scss"
-            ],
+            "styles": ["apps/monorepos/src/styles.scss"],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "libs/ui/src/lib/styles"
-              ]
+              "includePaths": ["libs/ui/src/lib/styles"]
             },
             "scripts": []
           },
@@ -111,14 +107,13 @@
               ]
             }
           },
-          "outputs": [
-            "{options.outputPath}"
-          ]
+          "outputs": ["{options.outputPath}"]
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "monorepos:build"
+            "browserTarget": "monorepos:build",
+            "proxyConfig": "apps/monorepos/src/proxy.conf.json"
           },
           "configurations": {
             "production": {
@@ -140,10 +135,7 @@
               "apps/monorepos/tsconfig.spec.json",
               "apps/monorepos/tsconfig.editor.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/monorepos/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!apps/monorepos/**/*"]
           }
         },
         "test": {
@@ -152,9 +144,7 @@
             "jestConfig": "apps/monorepos/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/apps/monorepos"
-          ]
+          "outputs": ["coverage/apps/monorepos"]
         }
       }
     },
@@ -179,13 +169,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "apps/monorepos-e2e/tsconfig.e2e.json"
-            ],
-            "exclude": [
-              "**/node_modules/**",
-              "!apps/monorepos-e2e/**/*"
-            ]
+            "tsConfig": ["apps/monorepos-e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**", "!apps/monorepos-e2e/**/*"]
           }
         }
       }
@@ -203,10 +188,7 @@
               "libs/reusable-components/tsconfig.lib.json",
               "libs/reusable-components/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/reusable-components/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/reusable-components/**/*"]
           }
         },
         "test": {
@@ -215,9 +197,7 @@
             "jestConfig": "libs/reusable-components/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/libs/reusable-components"
-          ]
+          "outputs": ["coverage/libs/reusable-components"]
         },
         "storybook": {
           "builder": "@nrwl/storybook:storybook",
@@ -236,9 +216,7 @@
         },
         "build-storybook": {
           "builder": "@nrwl/storybook:build",
-          "outputs": [
-            "{options.outputPath}"
-          ],
+          "outputs": ["{options.outputPath}"],
           "options": {
             "uiFramework": "@storybook/angular",
             "outputPath": "dist/storybook/reusable-components",
@@ -280,9 +258,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "apps/reusable-components-e2e/tsconfig.e2e.json"
-            ],
+            "tsConfig": ["apps/reusable-components-e2e/tsconfig.e2e.json"],
             "exclude": [
               "**/node_modules/**",
               "!apps/reusable-components-e2e/**/*"
@@ -304,10 +280,7 @@
               "libs/ui/tsconfig.lib.json",
               "libs/ui/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**",
-              "!libs/ui/**/*"
-            ]
+            "exclude": ["**/node_modules/**", "!libs/ui/**/*"]
           }
         },
         "test": {
@@ -316,14 +289,66 @@
             "jestConfig": "libs/ui/jest.config.js",
             "passWithNoTests": true
           },
-          "outputs": [
-            "coverage/libs/ui"
-          ]
+          "outputs": ["coverage/libs/ui"]
         }
       },
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
+        }
+      }
+    },
+    "server": {
+      "root": "apps/server",
+      "sourceRoot": "apps/server/src",
+      "projectType": "application",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/node:build",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/apps/server",
+            "main": "apps/server/src/main.ts",
+            "tsConfig": "apps/server/tsconfig.app.json",
+            "assets": ["apps/server/src/assets"]
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "extractLicenses": true,
+              "inspect": false,
+              "fileReplacements": [
+                {
+                  "replace": "apps/server/src/environments/environment.ts",
+                  "with": "apps/server/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/node:execute",
+          "options": {
+            "buildTarget": "server:build"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/server/tsconfig.app.json",
+              "apps/server/tsconfig.spec.json"
+            ],
+            "exclude": ["**/node_modules/**", "!apps/server/**/*"]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/server"],
+          "options": {
+            "jestConfig": "apps/server/jest.config.js",
+            "passWithNoTests": true
+          }
         }
       }
     }
