--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nrwl/angular": "11.6.1",
+    "@storybook/addon-essentials": "^6.2.2",
+    "@storybook/addon-links": "^6.2.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -52,6 +54,7 @@
     "@angular/cli": "11.2.7",
     "@angular/compiler-cli": "11.2.8",
     "@angular/language-service": "11.2.8",
+    "@compodoc/compodoc": "^1.1.11",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "^11.6.1",
